--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,5 +6,6 @@
     "**/node_modules": true,
     "**/*lock*": true,
     "**/LICENSE": true
-  }
+  },
+  "typescript.tsdk": "node_modules/typescript/lib"
 }
